Fix modal overflow body bug

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -5,10 +5,11 @@
   right: 0;
   bottom: 0;
   z-index: 1000;
+  overflow-y: auto;
 }
 
 .modal-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -29,6 +30,11 @@
   background-color: #fff;
   border: 1px solid $color-border;
   box-shadow: $shadow-l2;
+
+  @media (max-height: 600px) {
+    @include transform(translate(-50%,0%));
+    top: 0;
+  }
 }
 
 .modal-buttons {
